--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="please_input_pwd">请输入密码</string>
     <string name="log_already_open2">Log 已打开</string>
     <string name="wrong_pwd">密码错误</string>
+    <string name="effective_next_time">下次启动时生效</string>
+    <string name="restore">恢复</string>
 </resources>
